# pydirtree

./: .gitignore  LICENSE.txt  README.md  README_en.md  i18n.py  pydirtree.py  pydirtree_gui.py  pydirtree_gui.spec  pyproject.toml  version.txt
locales/: cs.json  da.json  de.json  el.json  en.json  es.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  ja.json  ko.json  lt.json  lv.json  nl.json  pl.json  pt.json  ro.json  ru.json  sk.json  sl.json  sq.json  sr.json  sv.json  tr.json  zh.json
